@@ -755,6 +755,8 @@ Release 2.8.0 - UNRELEASED
 
     HDFS-7858. Improve HA Namenode Failover detection on the client. (asuresh)
 
+    HDFS-8180. AbstractFileSystem Implementation for WebHdfs. (snayak via jghoman)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
